[package]
name = "netrunner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.2"
async-recursion = "1.0.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.2", features = ["derive"] }
flate2 = "1.0.24"
reqwest = { version = "0.11", features = ["gzip"] }
regex = "1.0"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
spyglass-lens = "0.1"
sitemap = "0.4.1"
texting_robots = "0.2.1"
tokio = { version = "1.0", features = ["full"] }
tokio-retry = "0.3"
url = "2.3"