[package]
name = "spyglass-netrunner"
version ="0.2.12"
authors = ["Andrew Huynh <andrew@spyglass.fyi>"]
description = "A small CLI utility to help build lenses for spyglass"
edition = "2021"
homepage = "https://github.com/spyglass-search/netrunner"
keywords = ["spyglass", "cli", "warc"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/spyglass-search/netrunner"

[dependencies]
anyhow = "1.0"
async-recursion = "1.0.0"
blake2 = "0.10.4"
bytes = "1.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.2", features = ["derive"] }
dashmap = "5.4"
ego-tree = "0.6.2"
feedfinder = "0.4.0"
flate2 = "1.0.24"
futures = "0.3"
governor = "0.5"
hex = "0.4.3"
html5ever = "0.26.0"
log = "0.4"
nonzero_ext = "0.3.0"
regex = "1.0"
reqwest = { version = "0.11", features = ["gzip"] }
ron = "0.8"
rss = "2.0.1"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sitemap = "0.4.1"
spyglass-lens = "0.1.6"
tendril = "0.4.2"
texting_robots = "0.2.1"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-retry = "0.3"
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"]}
url = "2.3"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"]}
warc = "0.3"
walkdir = "2.3.2"

[[bin]]
name = "netrunner"
path = "src/main.rs"

[lib]
name = "libnetrunner"
path = "src/lib/mod.rs"
